# rag-api-demo

./: .env.example  .gitignore  Makefile  README.md  TASK2_RAG_API_CHECKLIST.md  TASK2_RAG_API_NOTES.md  environment.lock.yml  pyproject.toml
app/: config.py  main.py  models.py  rag_pipeline.py  schemas.py
ingestion/: build_index.py  loaders.py
notebooks/: 01_experiments_ingestion.ipynb  01_sanity_checks_and_experiments.ipynb
tests/: test_api.py  test_ingestion.py  test_rag_pipeline.py
