[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-api-nwidia"
version = "0.1.0"
description = "Small RAG API demo over an NVIDIA document using FastAPI and OpenAI."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "openai",
  "chromadb",
  "pypdf",
  "python-dotenv",
  "pydantic-settings",
  "pytest",
  "httpx",
  "black",
  "ruff",
]

[tool.setuptools]
packages = ["app", "ingestion"]

[project.optional-dependencies]
dev = [
  "jupyterlab",
  "ipykernel",
]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "I"]
ignore = []

