[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-api-nwidia"
version = "0.1.0"
description = "Small RAG API demo over an NVIDIA document using FastAPI and OpenAI."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "openai",
  "chromadb",
  "pypdf",
  "python-dotenv",
  "pydantic-settings",
  "pytest",
  "pytest-mock",
  "httpx",
  "ruff",
]

[tool.setuptools]
packages = ["app", "ingestion"]

[project.optional-dependencies]
dev = [
  "jupyterlab",
  "ipykernel",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B"]  # Errors, Flakes, Bugs
ignore = ["E501"] # Less noise, line length handled by formatter anyway
